Fix width and spacing of alert boxes

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,3 +15,6 @@
  *= require foundation_and_overrides
 
  */
+.alert-box:first-child {
+  margin-top: 1.25rem;
+}
